WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
24216
REGRESSION(36919): With WebKit from Safari 4, MSN Messenger's text entry field loses focus after entering a message
https://bugs.webkit.org/show_bug.cgi?id=24216
Summary
REGRESSION(36919): With WebKit from Safari 4, MSN Messenger's text entry fiel...
Adele Peterson
Reported
2009-02-26 17:06:11 PST
With WebKit from Safari 4, MSN Messenger's text entry field to lose focus after entering a message * STEPS TO REPRODUCE 1. Install and launch MSN Messenger for Mac 2. Sign on 3. Open a chat with a buddy 4. Click in the text input area and type them a message. 5. Hit enter. Observe that the text input area loses focus. The only way to type a second message is to click there again. The text input area used to stay focused, allowing you to type multiple messages in a row. <
rdar://problem/6618166
>
Attachments
patch
(7.51 KB, patch)
2009-02-26 17:08 PST
,
Adele Peterson
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adele Peterson
Comment 1
2009-02-26 17:08:28 PST
Created
attachment 28056
[details]
patch
Geoffrey Garen
Comment 2
2009-02-26 17:12:02 PST
Comment on
attachment 28056
[details]
patch r=me
Adele Peterson
Comment 3
2009-02-26 17:29:47 PST
Committed revision 41276.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug